--- a/css/styles.css
+++ b/css/styles.css
@@ -244,6 +244,8 @@
     h1 {
         margin-bottom: 200px;
         letter-spacing: 5px;
+        color: #000;
+        text-shadow: 1px -1px 2px #000, -1px 1px 2px #000, 1px 1px 2px #000, -1px -1px 2px #000;
     }
     
     section a {
