--- a/css/styles.css
+++ b/css/styles.css
@@ -271,6 +271,7 @@
         color: white;
         background-color: #1B2845;
         justify-content: center;
+        text-align: center;
     }
     
     h3.owner-2 {
