--- a/css/styles.css
+++ b/css/styles.css
@@ -302,3 +302,18 @@
     h3.owner-2 {
         font-size: 1rem;
     }
+    
+    .map-responsive {
+        overflow: hidden;
+        padding-bottom: 56.25%;
+        position: relative;
+        height: 0;
+    }
+    
+    .map-responsive iframe {
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+    }
